# mcp_mysql

./: .env.example  DEPLOYMENT.md  Dockerfile  MCP_SSE_POST_FLOW.md  README.md  SSE-DEBUGGING-GUIDE.md  docker-compose.yml  mcp-mysql.service  mcp_mysql.code-workspace  pip-install-guide.md  pyproject.toml  requirements.txt  start.sh  update_server.ps1  update_server.sh
mcp_mysql/: __init__.py  server.py
